--- a/signup.css
+++ b/signup.css
@@ -235,3 +235,8 @@ header {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+a:hover,
+button:hover {
+  cursor: pointer;
+}
